# VehicleDynamics

./: .coding-guideline-manifest.txt  .gitmodules  CLAUDE.md  model.py  parameters.py  plot.py  pyproject.toml  quarter_car_simulation.py  simulation.py
.github/: labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: build.md  chore.md  ci.md  documentation.md  feature.md  fix.md  performance.md  refactor.md  revert.md  style.md  test.md
.github/workflows/: auto-label-major.yml  check-links.yml  check-pr-title.yml  labeler.yml  release-drafter.yml
